added capacitor