@@ -1,73 +1,232 @@
 package com.example.circuit_simulator.service;
 
+import com.example.circuit_simulator.simulation.AnalysisModes;
+import com.example.circuit_simulator.simulation.SimPhase;
+import com.example.circuit_simulator.simulation.TranProbe;
+import com.example.circuit_simulator.simulation.TranScenario;
+import com.example.circuit_simulator.simulation.TranSpiceBuild;
 import com.example.circuit_simulator.utils.SpiceGenerator;
 import com.fasterxml.jackson.databind.ObjectMapper;
 import lombok.RequiredArgsConstructor;
 import org.springframework.stereotype.Service;
 
 import java.nio.file.Files;
+import java.nio.file.Path;
 import java.nio.file.Paths;
+import java.util.ArrayList;
 import java.util.HashMap;
+import java.util.LinkedHashMap;
 import java.util.List;
 import java.util.Map;
+import java.util.UUID;
 
 @Service
 @RequiredArgsConstructor
 public class SimulationService {
 
+    private static final int MAX_TRAN_POINTS = 500;
+
+    private final ObjectMapper objectMapper;
+
     public String simulate(String circuitJson) {
+        return simulate(circuitJson, null);
+    }
+
+    public String simulate(String circuitJson, String problemCode) {
+        return simulate(circuitJson, problemCode, null);
+    }
+
+    public String simulate(String circuitJson, String problemCode, String simPhase) {
         try {
-            return toJsonString(simulateToMap(circuitJson));
+            return objectMapper.writeValueAsString(
+                    simulateToMap(circuitJson, problemCode, simPhase));
         } catch (Exception e) {
-            return "{ \"error\": \"" + e.getMessage() + "\" }";
+            return "{ \"error\": \"" + escapeJson(e.getMessage()) + "\" }";
         }
     }
 
     @SuppressWarnings("unchecked")
     public Map<String, Object> simulateToMap(String circuitJson) throws Exception {
-        try {
-            Map<String, Double> nodeVoltages = runAndParse(circuitJson);
-            Map<String, Object> componentVoltages =
-                    computeComponentVoltages(circuitJson, nodeVoltages);
+        return simulateToMap(circuitJson, null, null);
+    }
 
-            Map<String, Object> result = new HashMap<>();
-            result.put("nodes", nodeVoltages);
-            result.put("components", componentVoltages);
-            return result;
+    @SuppressWarnings("unchecked")
+    public Map<String, Object> simulateToMap(String circuitJson, String problemCode)
+            throws Exception {
+        return simulateToMap(circuitJson, problemCode, null);
+    }
+
+    @SuppressWarnings("unchecked")
+    public Map<String, Object> simulateToMap(
+            String circuitJson, String problemCode, String simPhaseName) throws Exception {
+        try {
+            if (AnalysisModes.usesTransient(problemCode)) {
+                SimPhase phase = parseSimPhase(simPhaseName);
+                return switch (phase) {
+                    case idle, pressed -> runDcToMap(circuitJson);
+                    case discharge -> runDischargeTranToMap(circuitJson);
+                };
+            }
+
+            return runDcToMap(circuitJson);
         } catch (Exception e) {
             return Map.of("error", e.getMessage());
         }
     }
 
-    private String toJsonString(Map<String, Object> result) {
-        if (result.containsKey("error")) {
-            return "{ \"error\": \"" + result.get("error") + "\" }";
+    private Map<String, Object> runDcToMap(String circuitJson) throws Exception {
+        Map<String, Double> nodeVoltages = runDcAndParse(circuitJson);
+        Map<String, Object> componentVoltages =
+                computeComponentVoltages(circuitJson, nodeVoltages);
+
+        Map<String, Object> result = new HashMap<>();
+        result.put("analysis", "dc");
+        result.put("nodes", nodeVoltages);
+        result.put("components", componentVoltages);
+        return result;
+    }
+
+    private Map<String, Object> runDischargeTranToMap(String circuitJson) throws Exception {
+        String chargedJson = SpiceGenerator.applySwitchStates(
+                circuitJson, Map.of("button_1", "closed"));
+        Map<String, Double> chargedNodes = runDcAndParse(chargedJson);
+        return simulateTranToMap(
+                circuitJson,
+                SpiceGenerator.generateDischargeTranSpice(
+                        circuitJson,
+                        chargedNodes,
+                        TranScenario.discharge()));
+    }
+
+    private SimPhase parseSimPhase(String simPhaseName) {
+        if (simPhaseName == null || simPhaseName.isBlank()) {
+            return SimPhase.idle;
         }
-        @SuppressWarnings("unchecked")
-        Map<String, Double> nodes = (Map<String, Double>) result.get("nodes");
-        @SuppressWarnings("unchecked")
-        Map<String, Object> components = (Map<String, Object>) result.get("components");
-        return "{ " +
-                "\"nodes\": " + NgspiceService.toJson(nodes) + "," +
-                "\"components\": " + NgspiceService.toJson(components) +
-                "}";
+        try {
+            return SimPhase.valueOf(simPhaseName.trim().toLowerCase());
+        } catch (IllegalArgumentException e) {
+            return SimPhase.idle;
+        }
     }
 
-    private Map<String, Double> runAndParse(String circuitJson) throws Exception {
+    private Map<String, Object> simulateTranToMap(String circuitJson, TranSpiceBuild build)
+            throws Exception {
+        String runId = UUID.randomUUID().toString().replace("-", "");
+        Path circuitFile = Paths.get("circuit-" + runId + ".cir");
+        Path wrdataFile = Paths.get("tran_out.txt");
+        Path logFile = Paths.get("output-" + runId + ".txt");
+
+        try {
+            Files.deleteIfExists(wrdataFile);
+            Files.writeString(circuitFile, build.netlist());
+            NgspiceService.runNgspice(circuitFile.toString(), logFile.toString());
+
+            int probeCount = build.probes().size();
+            if (probeCount == 0) {
+                throw new RuntimeException("No transient probes defined for circuit");
+            }
+
+            if (!Files.exists(wrdataFile)) {
+                throw new RuntimeException("ngspice did not produce tran_out.txt");
+            }
+
+            NgspiceService.WrdataSeries series =
+                    NgspiceService.parseWrdata(wrdataFile.toString(), probeCount);
+
+            if (series.time().isEmpty()) {
+                throw new RuntimeException("Transient simulation produced no data");
+            }
+
+            NgspiceService.WrdataSeries thinned = thinSeries(series, MAX_TRAN_POINTS);
+            Map<String, Object> components = buildComponentSeries(build.probes(), thinned);
+
+            TranScenario scenario = build.scenario();
+            Map<String, Object> result = new LinkedHashMap<>();
+            result.put("analysis", "tran");
+            result.put("step", scenario.step());
+            result.put("stop", scenario.stop());
+            result.put("simPhase", "discharge");
+            result.put("time", roundList(thinned.time()));
+            result.put("components", components);
+            return result;
+        } finally {
+            Files.deleteIfExists(circuitFile);
+            Files.deleteIfExists(wrdataFile);
+            Files.deleteIfExists(logFile);
+        }
+    }
+
+    private Map<String, Object> buildComponentSeries(
+            List<TranProbe> probes,
+            NgspiceService.WrdataSeries series) {
+        Map<String, Map<String, List<Double>>> grouped = new LinkedHashMap<>();
+
+        for (int i = 0; i < probes.size(); i++) {
+            TranProbe probe = probes.get(i);
+            List<Double> values = roundList(series.probeValues().get(i));
+            grouped.computeIfAbsent(probe.componentId(), key -> new LinkedHashMap<>())
+                    .put(probe.metric(), values);
+        }
+
+        Map<String, Object> components = new LinkedHashMap<>();
+        grouped.forEach((id, metrics) -> components.put(id, metrics));
+        return components;
+    }
+
+    private NgspiceService.WrdataSeries thinSeries(
+            NgspiceService.WrdataSeries series, int maxPoints) {
+        int size = series.time().size();
+        if (size <= maxPoints) {
+            return series;
+        }
+
+        int stride = (int) Math.ceil((double) size / maxPoints);
+        List<Double> time = new ArrayList<>();
+        List<List<Double>> probeValues = new ArrayList<>();
+        for (int i = 0; i < series.probeValues().size(); i++) {
+            probeValues.add(new ArrayList<>());
+        }
+
+        for (int i = 0; i < size; i += stride) {
+            time.add(series.time().get(i));
+            for (int p = 0; p < series.probeValues().size(); p++) {
+                probeValues.get(p).add(series.probeValues().get(p).get(i));
+            }
+        }
+
+        int last = size - 1;
+        if (time.get(time.size() - 1) < series.time().get(last)) {
+            time.add(series.time().get(last));
+            for (int p = 0; p < series.probeValues().size(); p++) {
+                probeValues.get(p).add(series.probeValues().get(p).get(last));
+            }
+        }
+
+        return new NgspiceService.WrdataSeries(time, probeValues);
+    }
+
+    private Map<String, Double> runDcAndParse(String circuitJson) throws Exception {
         String spice = SpiceGenerator.generateSpice(circuitJson);
+        String runId = UUID.randomUUID().toString().replace("-", "");
+        Path circuitFile = Paths.get("circuit-" + runId + ".cir");
+        Path logFile = Paths.get("output-" + runId + ".txt");
 
-        Files.write(Paths.get("circuit.cir"), spice.getBytes());
-
-        NgspiceService.runNgspice("circuit.cir");
-
-        return NgspiceService.parse("output.txt");
+        try {
+            Files.writeString(circuitFile, spice);
+            NgspiceService.runNgspice(circuitFile.toString(), logFile.toString());
+            return NgspiceService.parse(logFile.toString());
+        } finally {
+            Files.deleteIfExists(circuitFile);
+            Files.deleteIfExists(logFile);
+        }
     }
 
-    private Map<String, Object> computeComponentVoltages(            String circuitJson,
+    @SuppressWarnings("unchecked")
+    private Map<String, Object> computeComponentVoltages(
+            String circuitJson,
             Map<String, Double> nodeVoltages) throws Exception {
 
-        ObjectMapper mapper = new ObjectMapper();
-        Map<String, Object> data = mapper.readValue(circuitJson, Map.class);
+        Map<String, Object> data = objectMapper.readValue(circuitJson, Map.class);
 
         List<Map<String, Object>> components =
                 (List<Map<String, Object>>) data.get("components");
@@ -160,6 +319,14 @@ public class SimulationService {
         return result;
     }
 
+    private List<Double> roundList(List<Double> values) {
+        List<Double> rounded = new ArrayList<>(values.size());
+        for (Double value : values) {
+            rounded.add(clean(value));
+        }
+        return rounded;
+    }
+
     private double clean(double value) {
         if (Math.abs(value) < 1e-6) return 0.0;
 
@@ -170,7 +337,20 @@ public class SimulationService {
     }
 
     private double getVoltage(String node, Map<String, Double> nodeVoltages) {
-        if (node.equals("0")) return 0.0;
+        if (node.equals("0")) {
+            return 0.0;
+        }
+        String key = "v(" + node.toLowerCase() + ")";
+        if (nodeVoltages.containsKey(key)) {
+            return nodeVoltages.get(key);
+        }
         return nodeVoltages.getOrDefault("v(" + node + ")", 0.0);
+    }
+
+    private static String escapeJson(String message) {
+        if (message == null) {
+            return "";
+        }
+        return message.replace("\\", "\\\\").replace("\"", "\\\"");
     }
 }
